--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
  <li><a href="http://www.visatriplecrown.com/cosmetics-fragrances.shtml">Cosmetics/Fragrance</a>
  <li><a href="http://www.visatriplecrown.com/handbags-purses.shtml">Handbags</a>
  <li><a href="http://www.visatriplecrown.com/jewelry.shtml">Jewelry</a>
-	 <li><a href="https://casino-spinpanda.com">Casino Spinpanda</a>
+	 <li><a href="https://www.spinsamurai11.com/en-au">Spin Samurai Online Casino</a>
  <li><a href="http://www.visatriplecrown.com/shoes-footware.shtml">Shoes</a><P>
  
 <u><b>Art/Photo/Music</b></u><br>
